css/responsive.css
@media only screen and (max-width: 1148px) {
  .headshot-wrapper {
    /* margin-top: 30%; */
    /* margin-left: 20%; */
  }

  .project-section-item-title {
    padding-top: 2%;
  }

  .project-section-item-description {
    width: 80%;
  }


  .project-section-item-text {
    min-height: fit-content;
    min-width: 80%;
  }

  .project-section-image {
    /* height: 400px; */
    padding-top: 30px;
    padding: 20px 20px;
  }

}

@media only screen and (max-width: 800px) {
  #main-header {
    width: 500px;
    
  }
}


@media only screen and (max-width: 750px) {
  /* .project-section-item-text {
    min-height: fit-content;
  } */


  .cd-headline.slide {
    /* font-size: 48px; */
  }

  .headshot-wrapper {
    /* position: fixed; */
    /* margin-left: 0%; */
    /* margin: 30% auto; */
    /* margin: 20% auto; */
    /* margin-bottom: 0%; */
  }
}

@media only screen and (max-width: 415px) {
  #logo {
    font-size: 23px;
  }

  .project-section-item {
    flex-wrap: wrap;
  }

  .project-section-item-title {
    /* font-size: 24px; */
    color: #ebb82c;
  }

    #main-content {
      /* font-size: 20px; */
    }


  .cd-words-wrapper {
    font-size: 30px;
  }

  .project-section-item-text {
    /* border: 1px solid green; */
    min-width: 100%;
    width: 200px;
  }

  
}

@media screen and (max-width: 1250px) {
  .wrapper {
    max-width: 90%;
  }
}

@media screen and (max-width: 768px) {
  #navbar-links {
    display: none;
  }

  .skills-section-items {
    flex-direction: column;
  }

  .skills-section-item + .skills-section-item {
    margin: 5px 0 0 0;
  }
}

@media screen and (max-width: 400px) {
  h1 {
    font-size: 32px;
    line-height: 46px;
  }

  h2 {
    font-size: 24px;
  }

  p {
    font-size: 16px;
    line-height: 23px;
  }

  /* .project-section-item {
    flex-direction: column;
    height: unset;
    padding: 20px 20px;
    align-items: flex-start;
  } */

  /* .project-section-item img {
    margin-top: 10px;
    margin-left: unset;
    /* margin-right: auto; */
  } 

  .skills-section-item-title,
  .skills-section-item-skills,
  .project-section-item-title {
    /* font-size: 16px; */
  }

  .skills-section-item-skills {
    font-size: 16px;
  }

  #footer-copyright {
    font-size: 16px;
  }
}

@media only screen and (max-width: 375px) {
  #logo {
    font-size: 19px;
  }

  .project-section-item:hover {
    cursor: pointer;
    background-color: initial;
    border-bottom-color: initial;
  }

  .project-section-item:hover
    > .project-section-item-text
    > .project-section-item-title {
    color: initial;
  }

  /* .project-section-item:hover > img {
    -webkit-filter: grayscale(0%); 
    filter: grayscale(0%);
  }
   */
}

@media only screen and (max-width: 320px) {
  #logo {
    font-size: 13px;
  }
}

